include/sevenzip/sz_writer.h

/* ============================================================================
 * Writer Creation/Destruction
 * ========================================================================= */

/**
 * @brief Create a new archive writer
 *
 * @param path Archive file path (UTF-8)
 * @param format Archive format
 * @param out_handle Pointer to receive writer handle
 * @return SZ_OK on success, error code otherwise
 *
 * @note Call sz_writer_finalize() or sz_writer_cancel() when done
 */
SZ_API sz_result sz_writer_create(const char* path, sz_format format, sz_writer_handle* out_handle);
/**
 * @brief Finalize and close the archive writer
 *
 * @param handle Writer handle
 * @return SZ_OK on success, error code otherwise
 *
 * @note This completes the archive and flushes all data
 */
SZ_API sz_result sz_writer_finalize(sz_writer_handle handle);
/* ============================================================================
 * Configuration
 * ========================================================================= */

/**
 * @brief Set compression level
 *
 * @param handle Writer handle
 * @param level Compression level
 * @return SZ_OK on success, error code otherwise
 */
SZ_API sz_result sz_writer_set_compression_level(sz_writer_handle handle,
                                                 sz_compression_level level);
/**
 * @brief Set password for encryption
 *
 * @param handle Writer handle
 * @param password Password string (UTF-8, NULL to disable)
 * @return SZ_OK on success, error code otherwise
 *
 * @note Password protection may not be supported for all formats
 */
SZ_API sz_result sz_writer_set_password(sz_writer_handle handle, const char* password);
/* ============================================================================
 * Adding Items
 * ========================================================================= */

/**
 * @brief Add a file to the archive
 *
 * @param handle Writer handle
 * @param file_path Source file path (UTF-8)
 * @param archive_path Path in archive (UTF-8, NULL to use file name)
 * @return SZ_OK on success, error code otherwise
 */
SZ_API sz_result sz_writer_add_file(sz_writer_handle handle, const char* file_path,
                                    const char* archive_path);
/**
 * @brief Add a directory to the archive
 *
 * @param handle Writer handle
 * @param dir_path Source directory path (UTF-8)
 * @param recursive Non-zero to include subdirectories
 * @return SZ_OK on success, error code otherwise
 */
SZ_API sz_result sz_writer_add_directory(sz_writer_handle handle, const char* dir_path,
                                         int recursive);